# isz

./: README.md  kdv_model.py  main.py  pde_solver.py  pyproject.toml  z2_comparison.py  z3.py
